--- a/pokedex/templates/all.html
+++ b/pokedex/templates/all.html
@@ -2,199 +2,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    
+    <!-- custom js & css -->
+    <link rel="stylesheet" href={% static 'style.css' %}>
+
     <title>Pokedex</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <style>
-@import url("https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300,700");
-body {
-  font-family: "Open Sans", Helvetica, sans-serif;
-  text-align: center;
-  margin: 20px;
-}
-
-img {
-  max-height: 150px;
-  margin: auto;
-  display: inline-block;
-}
-
-h1, h2, h3, h4, h5 {
-  margin: 0;
-  font-weight: 400;
-}
-
-.card {
-  display: inline-block;
-  width: 300px;
-  padding: 1em;
-  border-radius: 15px;
-  margin: 10px;
-  background: #ddd;
-  text-align: left;
-  box-shadow: 0px 5px 20px -10px #111111;
-  position: relative;
-  transition: 0.4s;
-}
-.card__caption {
-  background-color: rgba(255, 255, 255, 0.65);
-  padding: 1em;
-  position: relative;
-  border-radius: 0 0 3px 3px;
-}
-.card__image-container {
-  background-color: rgba(0, 0, 0, 0.7);
-  text-align: center;
-  padding: 1em 1em 0;
-  border-radius: 3px 3px 0 0;
-}
-.card__type {
-  position: absolute;
-  top: 0;
-  right: 1em;
-  transform: translateY(-50%);
-  color: #ffffff;
-  text-transform: uppercase;
-  font-family: "Open Sans Condensed", "Open Sans", helvetica, sans-serif;
-  letter-spacing: 0.1em;
-  padding: 0.25em;
-  line-height: 1;
-  border-radius: 2px;
-  background: #bbbbbb;
-}
-.card__label {
-  font-size: 10px;
-  text-transform: uppercase;
-  font-weight: 400;
-  display: block;
-  margin-bottom: 3px;
-}
-.card__name {
-  font-family: "Open Sans Condensed", "Open Sans", helvetica, sans-serif;
-  text-align: center;
-  font-size: 1.5em;
-  font-weight: 700;
-  letter-spacing: 0.02em;
-}
-.card__stats {
-  margin: 1em 0;
-  width: 100%;
-}
-.card__stats th {
-  font-family: "Open Sans Condensed", "Open Sans", helvetica, sans-serif;
-  text-align: right;
-  font-weight: 300;
-}
-.card__stats th, .card__stats td {
-  width: 50%;
-  padding: 0.25em 0.5em 0;
-}
-.card__abilities {
-  display: flex;
-  justify-content: space-between;
-}
-.card__ability {
-  margin-top: 1em;
-  flex: 1 0;
-}
-.card--normal {
-  background: linear-gradient(110deg, #FDBB2D 0%, #3A1C71 100%);
-  box-shadow: 0px 5px 20px -10px #3A1C71;
-}
-.card--normal .card__type {
-  background-color: #C08A53;
-}
-.card--water {
-  background: linear-gradient(120deg, #1CB5E0 0%, #000851 100%);
-  box-shadow: 0px 5px 20px -10px #000851;
-}
-.card--water .card__type {
-  background-color: #1CB5E0;
-}
-.card--electric {
-  background: linear-gradient(90deg, #ffde00 34%, #e8ff99 83%);
-}
-.card--electric .card__type {
-  background-color: #000;
-}
-.card--fire {
-  background: linear-gradient(0deg, #c71800 10%, #fcc245 100%);
-}
-.card--fire .card__type {
-  background-color: #c71800;
-}
-.card--psychic {
-  background: linear-gradient(140deg, #ffa7f9 0%, #ff2cc3 39%, #ffe3a7 100%);
-}
-.card--psychic .card__type {
-  background: #ff2cc3;
-}
-.card--dark {
-  background: linear-gradient(20deg, #191919 0%, #100b32 33%, #5c0249 100%);
-}
-.card--dark .card__type {
-  background: #5c0249;
-}
-.card--grass {
-  background: linear-gradient(140deg, #c4da3d 0%, #6e7f0e 69%, #275009 100%);
-}
-.card--grass .card__type {
-  background: #6e7f0e;
-}
-.card--bug   .card__type {
-  background: #6e7f0e;
-}
-.card--ice {
-  background: linear-gradient(230deg, #caeaf6 0%, #a0eaf1 46%, #6fb8eb 100%);
-}
-.card--ice .card__type {
-  background: #6fb8eb;
-}
-.card--fairy {
-  background: linear-gradient(45deg, #ffe6f0 0%, #ffc5e0 34%, #ffa6b9 71%, #ff8a95 100%);
-}
-.card--fairy .card__type {
-  background: #ff8a95;
-}
-.card:nth-child(1) {
-  transform: translateY(0px) rotate(-2deg);
-}
-.card:nth-child(2) {
-  transform: translateY(0px) rotate(-2deg);
-}
-.card:nth-child(3) {
-  transform: translateY(0px) rotate(0deg);
-}
-.card:nth-child(4) {
-  transform: translateY(0px) rotate(-2deg);
-}
-.card:nth-child(5) {
-  transform: translateY(0px) rotate(2deg);
-}
-.card:nth-child(6) {
-  transform: translateY(0px) rotate(-2deg);
-}
-.card:nth-child(7) {
-  transform: translateY(0px) rotate(-3deg);
-}
-.card:nth-child(8) {
-  transform: translateY(0px) rotate(0deg);
-}
-.card:nth-child(9) {
-  transform: translateY(0px) rotate(-1deg);
-}
-.card:hover {
-  z-index: 5;
-  box-shadow: 0px 13px 30px -15px #000000;
-  transform: translateY(-10px);
-}
-    </style>
 </head>
 <body>
+  {% if ev %}
+  <h1>Evolution Chart</h1>
+  </br>
+  {% else %}
+  <h1>Pokedex</h1>
+  </br>
+  {% endif %}
+  
   <div id="cards">  
     {% for pk in pokemon %}
-    <figure class="card card--{{pk.type}}">
+    
+    <figure class="card card--{{pk.type}}" id="myBtn">
+      <a href="/evolution-chain/{{pk.evolution}}">
       <div class="card__image-container">
         <img src={{pk.image}} alt="Eevee" class="card__image" width="175" height="150">   
       </div>
@@ -235,7 +68,9 @@ h1, h2, h3, h4, h5 {
           </tr>
         </tbody></table>
       </figcaption>
+    </a>
     </figure>
+
     {% endfor %}
   </div>
     <div class="m-4">
