fix a failure in endpoint ony one pokemon and add height and weight to the card

--- a/pokedex/templates/all.html
+++ b/pokedex/templates/all.html
@@ -67,6 +67,16 @@
             <td>{{pk.stats.speed}}</td>
           </tr>
         </tbody></table>
+        <div class="card__abilities">
+          <h4 class="card__ability">
+            <span class="card__label">Height</span>
+            {{pk.height}}
+          </h4>
+          <h4 class="card__ability">
+            <span class="card__label">Weight</span>
+            {{pk.weight}}
+          </h4>
+        </div>
       </figcaption>
     </a>
     </figure>
