--- a/pokedex/templates/individual.html
+++ b/pokedex/templates/individual.html
@@ -231,6 +231,16 @@ h1, h2, h3, h4, h5 {
             <td>{{pokemon.stats.speed}}</td>
           </tr>
         </tbody></table>
+        <div class="card__abilities">
+          <h4 class="card__ability">
+            <span class="card__label">Height</span>
+            {{pokemon.height}}
+          </h4>
+          <h4 class="card__ability">
+            <span class="card__label">Weight</span>
+            {{pokemon.weight}}
+          </h4>
+        </div>
       </figcaption>
     </figure>
   </div>
