--- a/pokedex/templates/individual.html
+++ b/pokedex/templates/individual.html
@@ -125,59 +125,60 @@
     </figure>
     {% if ev %}
     <img src={% static 'evolution.png' %} alt="Eevee" class="card__image" width="150"  style="margin-bottom: 350px;">
-    <figure class="card card--{{ev.type}}">
+    {% for e in ev %}
+    <figure class="card card--{{e.type}}">
       <div class="card__image-container">
-        <img src={{ev.image}} alt="Eevee" class="card__image" width="175" height="150">   
+        <img src={{e.image}} alt="Eeee" class="card__image" width="175" height="150">   
       </div>
       
       <figcaption class="card__caption">
-        <h1 class="card__name">{{ev.name}}</h1>
+        <h1 class="card__name">{{e.name}}</h1>
     
         <h3 class="card__type">
-          {{ev.type}}
+          {{e.type}}
         </h3>
     
         <table class="card__stats">
           <tbody><tr>
             <th>HP</th>
-            <td>{{ev.stats.hp}}</td>
+            <td>{{e.stats.hp}}</td>
           </tr>
           <tr>
             <th>Attack</th>
-            <td>{{ev.stats.attack}}</td>
+            <td>{{e.stats.attack}}</td>
           </tr>
           
           <tr>
             <th>Defense</th>
-            <td>{{ev.stats.defense}}</td>
+            <td>{{e.stats.defense}}</td>
           </tr>
     
           <tr>
             <th>Special Attack</th>
-            <td>{{ev.stats.sattack}}</td>
+            <td>{{e.stats.sattack}}</td>
           </tr>
           <tr>
             <th>Special Defense</th>
-            <td>{{ev.stats.sdefense}}</td>
+            <td>{{e.stats.sdefense}}</td>
           </tr>
           <tr>
             <th>Speed</th>  
-            <td>{{ev.stats.speed}}</td>
+            <td>{{e.stats.speed}}</td>
           </tr>
         </tbody></table>
         <div class="card__abilities">
           <h4 class="card__ability">
             <span class="card__label">Height</span>
-            {{ev.height}}
+            {{e.height}}
           </h4>
           <h4 class="card__ability">
             <span class="card__label">Weight</span>
-            {{ev.weight}}
+            {{e.weight}}
           </h4>
         </div>
       </figcaption>
     </figure>
-   
+    {% endfor %}
     {% endif %}
   </div>
       
