Hotfix variables accesed

--- a/pokedex/templates/individual.html
+++ b/pokedex/templates/individual.html
@@ -17,7 +17,7 @@
   <div id="cards"> 
     {% if pre %}
     <figure class="card card--{{pre.type}}">
-      <a href="/pokemon/{{pk.name}}">
+      <a href="/pokemon/{{pre.name}}">
       <div class="card__image-container">
         <img src={{pre.image}} alt="Eevee" class="card__image" width="175" height="150">   
       </div>
@@ -129,7 +129,7 @@
     <img src={% static 'evolution.png' %} alt="Eevee" class="card__image" width="150"  style="margin-bottom: 350px;">
     {% for e in ev %}
     <figure class="card card--{{e.type}}">
-      <a href="/pokemon/{{pk.name}}">
+      <a href="/pokemon/{{e.name}}">
       <div class="card__image-container">
         <img src={{e.image}} alt="Eeee" class="card__image" width="175" height="150">   
       </div>
